# FlowerHubFrontend

./: Dockerfile  compose.yml  pyproject.toml
.nicegui/: storage-user-00c37f6b-33ea-49b4-ba5a-620d102c4e5b.json  storage-user-00e0a490-e8e7-468e-9bb8-10965d8053eb.json  storage-user-00e1b97d-17b0-4f69-b88d-924c40e54adc.json  storage-user-00f7aad1-f770-4346-bbc4-b72eef516127.json  storage-user-011a2e2e-59e0-46db-ab8d-0b8c2b3ccd0d.json  storage-user-02327c73-10ce-4cbe-9ad2-7f3f070c52d6.json  storage-user-0235524f-245c-4d88-9e79-7c15857ff224.json  storage-user-0266568b-88d8-4fcd-b9fc-8ee65a5f85a9.json  storage-user-0272a97e-fcca-4d51-9d7b-065787edd976.json  storage-user-02ba7724-10fb-4c86-a47d-0f5ae1d2ddf7.json  storage-user-02c8336b-becb-4899-915a-08f2a7568b09.json  storage-user-02eb8819-cbc5-433e-8036-d64877893a8a.json  storage-user-03450365-3fa9-40b5-9a8c-99cbf62e1662.json  storage-user-039a1600-b51e-44d8-8811-d49c832d371e.json  storage-user-03d745bc-d886-4de3-904c-2cafca9cce9a.json  storage-user-050d72dc-ddda-4765-b58f-8812665a3d7c.json  storage-user-0545481a-3785-408b-a1cd-179f6e9a89c6.json  storage-user-05b12c20-25b0-49fc-bfb2-f548603ab9b9.json  storage-user-05c55e10-90f1-4e29-858c-0fff9b523249.json  storage-user-05eaaf01-73fa-4043-ae5a-1c6cc1ddf25f.json  storage-user-05f1c688-a152-41fa-bf3e-dba588375190.json  storage-user-06111b15-c22f-4e35-9960-172ed21be34b.json  storage-user-0642f54b-7363-4326-8596-5ffc12db2d9f.json  storage-user-08c01afa-062c-4494-8ad0-51f7dfe61221.json  storage-user-09238371-1f96-448c-9e9f-0fa35caed7c5.json  (+530 more)
app/: config.py  main.py
(+33 files in other folders)
